image-multiple-hotspot-question.css
/* Transparent background color is a IE10 hack to get click event*/
.h5p-image-hotspot-question .image-hotspot {
  position: absolute;
  background-color: rgba(0,0,0,0);
}

.h5p-image-hotspot-question .image-hotspot.circle {
  border-radius: 50%;
}

.h5p-image-hotspot-question .image-wrapper {
  display: inline-block;
  position: relative;
  overflow: hidden;
  height: 100%;
}

.h5p-image-hotspot-question .h5peditor .file img {
  max-width: 500px;
}

/* Image loader */
.h5p-image-hotspot-question .image-loader {
  width: 100%;
  height: 100%;
  background-color: #f6f6f6;
}

.h5p-image-hotspot-question .image-loader:after {
  position: absolute;
  content: "";
  background: url('https://h5p.org/sites/all/themes/professional_themec/images/h5p.svg') no-repeat center;
  background-size: 50% 50%;
  width: 100%;
  height: 100%;
}

.h5p-image-hotspot-question .image-loader.loading:after {
  -webkit-animation: spinning 3s infinite ease-in-out;
  animation: spinning 3s infinite ease-in-out;
}
@-webkit-keyframes spinning {
  0% {
    -webkit-transform: rotate(0deg);
  }
  30% {
    -webkit-transform: rotate(20deg);
  }
  60% {
    -webkit-transform: rotate(-20deg);
  }
}
@keyframes spinning {
  0% {
    transform: rotate(0deg);
  }
  30% {
    transform: rotate(20deg);
  }
  60% {
    transform: rotate(-20deg);
  }
}

/* Feedback circles */
.h5p-image-hotspot-question .hotspot-feedback {
  position: absolute;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  background: #e6ced1;
  box-shadow: 0 0 0.25em 0 rgba(0, 0, 0, 0.5);
  color: #c33f62;
  font-size: 16px;
  visibility: hidden;
  pointer-events: none;
}

.h5p-image-hotspot-question .hotspot-feedback:before {
  font-family: "H5PFontAwesome4";
  content: "\f00d";
  position: absolute;
  width: 100%;
  text-align: center;
  line-height: 32px;
}

/* Correct feedback */
.h5p-image-hotspot-question .hotspot-feedback.correct {
  background: #d1e2ce;
  color: #39692e;
}

.h5p-image-hotspot-question .hotspot-feedback.correct:before {
  content: "\f00c";
}

/* Already selected feedback */
.h5p-image-hotspot-question .hotspot-feedback.already-selected {
  background: #fcf8e3;
  color: #8a6d3b;
}

.h5p-image-hotspot-question .hotspot-feedback.already-selected:before {
  content: "\f12a";
}

/* Hotspot feedback animation*/
.h5p-image-hotspot-question .hotspot-feedback.fade-in{
  animation-name: fade-in;
  -webkit-animation-name: fade-in;

  animation-duration: 0.5s;
  -webkit-animation-duration: 0.5s;

  animation-timing-function: ease-out;
  -webkit-animation-timing-function: ease-out;

  visibility: visible !important;
}

.h5p-image-hotspot-question .h5p-question-content {
  margin-left: 0;
  margin-right: 0;
}

@keyframes fade-in {
  0% {
    transform: scale(0);
    opacity: 0.0;
  }
  30% {
    transform: scale(1.1);
  }
  60% {
    transform: scale(0.9);
    opacity: 1;
  }
  100% {
    transform: scale(1);
    opacity: 1;
  }
}

@-webkit-keyframes fade-in {
  0% {
    -webkit-transform: scale(0);
    opacity: 0.0;
  }
  30% {
    -webkit-transform: scale(1.1);
  }
  60% {
    -webkit-transform: scale(0.9);
    opacity: 1;
  }
  100% {
    -webkit-transform: scale(1);
    opacity: 1;
  }
}

.h5p-question-submit-answer:before {
  content: "\F058";
}

.h5p-image-hotspot-question .submit-answer-feedback {
  color: black;
  font-size: 16px;
  font-family: Arial, sans-serif;
}

.highlight-hotspot {
  border: 2px dashed rgba(0, 191, 255, 1);
  background-color: rgba(211, 211, 211, 0.75) !important;
}

.h5p-image-hotspot-question .h5p-question-buttons.right-align {
  width: 100% !important;
  text-align: right !important;
}

.h5p-image-hotspot-question .h5p-question-buttons.right-align .h5p-joubelui-button,
.h5p-image-hotspot-question .h5p-question-buttons.right-align .h5p-joubelui-button:first-child:last-child {
  margin: 0 0 0 0.5em !important;
}

